--- a/config.yaml
+++ b/config.yaml
@@ -10,3 +10,4 @@ params:
 singularity_docker_image: docker://continuumio/miniconda3:4.4.10
 threads: 1
 workdir: /home/tdayris/Documents/Developments/ngs-cleaning
+run_fqscreen: false
